2008-04-15  Timothy Hatcher  <timothy@apple.com>

        Adds a script resource icon. Update the CSS icon to better match the script icon.

        https://bugs.webkit.org/show_bug.cgi?id=18499

        Rubber-stamped by Adele Peterson.

        * page/inspector/Images/resourceCSSIcon.png: Updated.
        * page/inspector/Images/resourceJSIcon.png: Added.
        * page/inspector/inspector.css: Changed the script icon rule to reference the new image.

2008-04-16  Eric Seidel  <eric@webkit.org>

        Reviewed by hyatt.

        Fix leaky ImageBuffer code.

        * platform/graphics/GeneratedImage.cpp:
        (WebCore::GeneratedImage::drawPattern):
        * platform/graphics/ImageBuffer.h:
        * platform/graphics/cg/ImageBufferCG.cpp:
        (WebCore::ImageBuffer::image):

2008-04-15  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Oliver.

        <rdar://problem/5665299> REGRESSION (r27369): Paste text into a contenteditable div creates a contenteditable div for each line (16661)

        * editing/markup.cpp:
        (WebCore::createFragmentFromText): Don't use clones of the enclosing block to hold
        paragraphs if the enclosing block is the root editable element.

2008-04-15  Mark Rowe  <mrowe@apple.com>

        Reviewed by Jon Honeycutt.

        Don't treat the misnamed NSAccessibilitySortButtonRole as an accessibility role.  It is really
        a subrole of NSAccessibilityButtonRole.  As it is not used inside WebCore there is no change in
        behaviour as a result of doing this.  This fixes <rdar://problem/5866444>.

        * page/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::canSetFocusAttribute): Remove SortButtonRole as it is unused.
        * page/AccessibilityObject.h: Ditto.
        (WebCore::):
        * page/mac/AccessibilityObjectWrapper.mm:
        (RoleEntry::):

2008-04-15  Anders Carlsson  <andersca@apple.com>

        Fix leaks seen on bot.
        
        * loader/SubstituteResource.h: