@@ -1,3 +1,12 @@
+2008-04-16  Dan Bernstein  <mitz@apple.com>
+
+        Rubber-stamped by John Sullivan.
+
+        - remove unreachable code which was added in r8802
+
+        * rendering/RenderText.cpp:
+        (WebCore::RenderText::caretRect):
+
 2008-04-15  Timothy Hatcher  <timothy@apple.com>
 
         Adds a script resource icon. Update the CSS icon to better match the script icon.
